tdf#166715 speed up transparent fill operation

Transparent bitmapex drawing works fine these days, so we dont
need this fallback path anymore.

Dramatically speeds up rendering on most backends (the cairo drawinglayer renderer already has an optimised path here).

Change-Id: Ic66a4f2d76a6815d1cb3a439e416f1235be7a544
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/185795
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
(cherry picked from commit 1f61a2ec4e252d2eeccabd65a10650c8ee231a1b)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/185806
Reviewed-by: Patrick Luby <guibomacdev@gmail.com>